--- a/DrDiagnostic/popup.html
+++ b/DrDiagnostic/popup.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+    <button id="convertTo"></button>
+    <button id="convertBack"></button>
     <script src="popup.js"></script>
   </body>
 </html>
