--- a/DrDiagnostic/popup.html
+++ b/DrDiagnostic/popup.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
+    <form>
+      URL :
+      <input type="text" id="url">
+    </form>
     <button id="convertTo"></button>
     <button id="convertBack"></button>
     <script src="popup.js"></script>
