Textbox updated now opens up the url if it has delivery in the request

--- a/DrDiagnostic/popup.html
+++ b/DrDiagnostic/popup.html
@@ -4,10 +4,7 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <form>
-      URL :
-      <input type="text" id="url">
-    </form>
+    <input type="text" id="urlTextbox" placeholder="URL">
     <button id="convertTo"></button>
     <button id="convertBack"></button>
     <script src="popup.js"></script>
