Onetag button added

--- a/DrDiagnostic/popup.html
+++ b/DrDiagnostic/popup.html
@@ -7,6 +7,7 @@
     <input type="text" id="urlTextbox" placeholder="URL">
     <button id="convertTo"></button>
     <button id="convertBack"></button>
+    <button id="getFromOneTag"></button>
     <script src="popup.js"></script>
   </body>
 </html>
