Removed onetag until it works

--- a/DrDiagnostic/popup.html
+++ b/DrDiagnostic/popup.html
@@ -3,12 +3,11 @@
   <head>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
-  <body id="rcorners">
+  <body>
     <img src="images/Logo-128.png" alt="Logo" id="logo"><br>
-    <input type="text" id="urlTextbox" placeholder="API URL from Kibana"><br>
-    <button id="convertTo">Convert to Diagnostic Mode</button><br>
-    <button id="convertBack">Convert from Diagnostic Mode</button><br>
-    <button id="getFromOneTag">Get API from OneTag</button>
+    <input type="text" id="urlTextbox" placeholder="API URL from Kibana (press enter)" size="30"><br>
+    <button id="convertTo">Convert page to Diagnostic Mode</button><br>
+    <button id="convertBack">Convert page from Diagnostic Mode</button>
     <script src="popup.js"></script>
   </body>
 </html>
